--- a/style.css
+++ b/style.css
@@ -9,17 +9,17 @@ body{
   font-family: "Madimi One", sans-serif;
   font-weight: 400;
   font-style: normal;
+  display: flex;
+  flex-direction: column;
 
 }
-/* main{
-  background-image: url('images/télécharger\ \(38\).jpeg');
-  background-size: cover;
- background-attachment:scroll;
-background-repeat: no-repeat;
-} */
+header{
+  width: 100%;
+  position: fixed;
+  display: block;
+}
 header img {
   position: relative;
-
 }
 nav{
   margin-top: 0;
@@ -73,25 +73,44 @@ li{
 
 }
 
+
+
+/* acceuil */
+
+main{
+  margin-top: 140PX;
+}
+h1{
+  text-align: center;
+  font-size: xx-large;
+  color: coral;
+}
 main .section-one{
-  background-image: url('images/background.avif');
-  background-position: left;
+  background-image: url('images/Fleury.png');
+  background-position: center;
   background-size: contain;
   background-attachment: scroll;
   background-repeat:no-repeat ;
   width: 100%;
- height: 100vh;
+  height: 100vh;
 }
 .icone{
   width: 25PX;
   height: 25PX;
 }
+
+.logo img{
+  width: 80PX;
+  height: 80PX;
+}
 button{
-  border: solid white ;
-  background-color:  rgb(253, 186, 255) ;
+  border: solid blanchedalmond; ;
+  background-color: coral;
   border-radius: 30PX;
   height: 50PX;
   width: 150PX;
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
   
 }
 
@@ -105,14 +124,11 @@ button{
   margin-top: 20PX;
 }
 
-
-/* main */
-
 section{
   margin-top: 30PX;
 }
 .affichage_mode{
-  background-color: rgb(219, 216, 216);
+  background-color:  white;
   border-radius: 20PX;
   margin-left: auto;
   margin-right: auto;
@@ -121,6 +137,7 @@ section{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  box-shadow: 10px 14px 30px #abaeb1;
 }
 .affichage_mode img{
   width: 336PX;
@@ -145,12 +162,7 @@ section{
 
 
 
-
-
-
-
-
-
+/* footer */
 footer{
   height: auto;
   background-color: rgb(34, 42, 75);
@@ -194,3 +206,51 @@ footer .robe h4{
   margin-left: 35PX;
 
 }
+
+
+
+/* predre contact */
+
+
+form{
+  display: flex;
+  flex-direction: column;
+  padding: 150PX;
+  justify-content: space-around;
+  height: 55vh;
+}
+
+
+/* catalogue */
+
+.content {
+  display:flex;
+  justify-content: center;
+  align-content: center; 
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 180PX;
+}
+.rows{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.content img{
+  width:450PX ;
+  height: 350PX;
+  border-radius: 6px;
+}
+.display_1,.display_2,.display_3,.display_4,.display_5,.display_6{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width:450PX ;
+  height: 450PX;
+  border-radius: 6px;
+  box-shadow: 5px 14px 50px #abaeb1;
+}
+
